src/test/ui/feature-gates/feature-gate-extern_in_paths.stderr
error[E0658]: `extern` in paths is experimental (see issue #55600)
  --> $DIR/feature-gate-extern_in_paths.rs:4:13
   |
LL |     let _ = extern::std::vec::Vec::new(); //~ ERROR `extern` in paths is experimental
   |             ^^^^^^
   |
   = help: add #![feature(extern_in_paths)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
