src/test/ui/feature-gates/feature-gate-extern_in_paths.rs
struct S;

fn main() {
    let _ = extern::std::vec::Vec::new(); //~ ERROR `extern` in paths is experimental
}
